--- a/watchlist.html
+++ b/watchlist.html
@@ -7,36 +7,19 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	<script src="data.js"></script>
-	<script src="index.js"></script>
+	<script src="watchlist.js"></script>
 	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col-12 header text-center">
-				<h2 class="display-2">Scene It</h2>
-				<p>Search for movies you want to watch.</p>
-				<p>Save them to your list</p>
-				<span>View Watch List: </span>
-				<a href="watchlist.html" class="myWatchlist">Watchlist</a>
+                <h2 class="display-2">Scene It</h2>
+                <span>Return to Scene It list: </span>
+				<a href="index.html" class="myWatchlist">Watchlist</a>
 			</div>
-		</div>
-		
-		<div class="row">
-			<div class="col-12 search">
-
-				<form id="search-form">
-					<div class="input-group input-group-lg">
-				      <input class="form-control search-bar" placeholder="Search for a movie...">
-				      <span class="input-group-btn">
-				        <button class="btn btn-primary" type="submit">Search</button>
-				      </span>
-				    </div>
-				</form>
-			</div>
-		</div>
-		
-		<div class="row">
+        </div>
+        <div class="row">
 				<!-- MOVIES SHOW UP HERE! -->
 			<div class="col-12 results">
 				<div class="row movies-container"> 
@@ -44,5 +27,6 @@
 				</div>
 			</div>
 		</div>
+    </div>
 </body>
 </html>
